tests/hm_typing/faulty_recursive_function.sy
rec :: fn a: int do
    if a == 0 do
        rec' "abc"
    end
end

start :: fn do
    rec' 1
end

// error: A 'int' cannot be a 'str'
